--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.6",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.13.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -23,7 +24,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "tailwind-merge": "^3.3.1",
-    "three": "^0.181.0",
+    "three": "^0.180.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
