--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,5 +13,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# CORS Configuration
-cors.allowed-origins=http://localhost:3000,http://localhost:5173
+
+# JWT Configuration
+jwt.secret=MWjCcWwE2n0qE21NdkCYAL8kuQpVVnXyRfRu0xeczyE=
+jwt.expiration=86400000
